# STA

./: .gitignore  CMakeLists.txt
doc/: .gitignore  paper.tex
doc/include/: common.tex  dssta-noise.tex  dssta-process-variation-noise.tex  dssta-process-variation.tex  dynamic-steady-state.tex  introduction.tex  model-reduction.tex  noise.tex  preliminaries.tex  process-variation.tex  references.bib  static-steady-state.tex  thermal-model-solution.tex  transient-noise-process-variation.tex  transient-noise.tex  transient-process-variation.tex  transient.tex  tta-noise.tex  tta-process-variation-noise.tex  tta-process-variation.tex
src/: CMakeLists.txt  CommandLine.h  Configuration.cpp  Configuration.h  DynamicPower.cpp  DynamicPower.h  EigenvalueDecomposition.cpp  EigenvalueDecomposition.h  File.h  Graph.cpp  Graph.h  GraphAnalysis.cpp  GraphAnalysis.h  HotSpot.cpp  HotSpot.h  ListScheduler.h  ListScheduler.hpp  Platform.cpp  Platform.h  Pool.h  Priority.cpp  Priority.h  Processor.cpp  Processor.h  Schedule.cpp  Schedule.h  Solution.cpp  Solution.h  System.h  Task.cpp  Task.h  TemperatureAnalysis.cpp  TemperatureAnalysis.h  TransientTemperatureAnalysis.cpp  TransientTemperatureAnalysis.h  Utils.h  Variation.cpp  Variation.h  analyze.cpp  array.h  (+4 more)
test/: tgff2me
